@@ -1,12 +1,12 @@
-;; Copyright 2020-2023 The Defold Foundation
+;; Copyright 2020-2025 The Defold Foundation
 ;; Copyright 2014-2020 King
 ;; Copyright 2009-2014 Ragnar Svensson, Christian Murray
 ;; Licensed under the Defold License version 1.0 (the "License"); you may not use
 ;; this file except in compliance with the License.
-;; 
+;;
 ;; You may obtain a copy of the License, together with FAQs at
 ;; https://www.defold.com/license
-;; 
+;;
 ;; Unless required by applicable law or agreed to in writing, software distributed
 ;; under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 ;; CONDITIONS OF ANY KIND, either express or implied. See the License for the
@@ -16,22 +16,21 @@
   :description      "Defold game editor"
   :url              "https://www.defold.com/learn/"
 
-  :repositories     {"local" ~(str (.toURI (java.io.File. "localjars")))}
+  :repositories     {"local" ~(str (.toURI (java.io.File. "localjars")))
+                     "jogamp" "https://jogamp.org/deployment/maven"}
 
   :plugins          [[lein-protobuf-minimal-mg "0.4.5" :hooks false]
-                     [lein-sass "0.4.0"]
                      [codox "0.9.3"]]
 
-  :dependencies     [[org.clojure/clojure                         "1.10.0"]
+  :dependencies     [[org.clojure/clojure                         "1.12.0"]
                      [org.clojure/core.cache                      "0.7.1"]
                      [org.clojure/core.async                      "1.5.648"]
                      [org.clojure/tools.cli                       "0.3.5"]
                      [org.clojure/tools.macro                     "0.1.5"]
                      [org.clojure/tools.namespace                 "1.2.0"]
-                     [org.clojure/data.int-map                    "0.2.4"]
-                     [org.clojure/data.json                       "0.2.6"]
-                     [com.cognitect/transit-clj                   "0.8.285"
-                      :exclusions [com.fasterxml.jackson.core/jackson-core]] ; transit-clj -> 2.3.2, amazonica -> 2.6.6
+                     [org.clojure/data.int-map                    "1.3.0"]
+                     [org.clojure/data.json                       "2.5.0"]
+                     [com.cognitect/transit-clj                   "0.8.285"]
                      [prismatic/schema                            "1.1.9"]
                      [prismatic/plumbing                          "0.5.2"]
                      [com.google.protobuf/protobuf-java           "3.20.1"]
@@ -51,8 +50,7 @@
                      [javax.vecmath/vecmath                       "1.5.2"]
                      [org.codehaus.jackson/jackson-core-asl       "1.9.13"]
                      [org.codehaus.jackson/jackson-mapper-asl     "1.9.13"]
-                     [org.eclipse.jgit/org.eclipse.jgit           "4.2.0.201601211800-r"
-                      :exclusions [org.apache.httpcomponents/httpclient]] ; jgit -> 4.3.6, amazonica -> 4.5.2
+                     [org.eclipse.jgit/org.eclipse.jgit           "4.2.0.201601211800-r"]
                      [clj-antlr                                   "0.2.2"
                       :exclusions [org.antlr/antlr4 org.antlr/antlr4-runtime]]
                      [org.antlr/antlr4 "4.7.2"]
@@ -65,12 +63,14 @@
                      [com.defold.lib/bob                          "1.0"]
                      [com.defold.lib/openmali                     "1.0"]
 
-                     [com.atlassian.commonmark/commonmark         "0.9.0"]
+                     [metosin/reitit-core "0.8.0-alpha1"]
 
-                     [amazonica                                   "0.3.79"
-                      :exclusions [com.amazonaws/aws-java-sdk com.amazonaws/amazon-kinesis-client]]
-                     [com.amazonaws/aws-java-sdk-core             "1.11.63"]
-                     [com.amazonaws/aws-java-sdk-s3               "1.11.63"]
+                     [org.commonmark/commonmark "0.21.0"]
+                     [org.commonmark/commonmark-ext-autolink "0.21.0"]
+
+                     [com.cognitect.aws/api "0.8.673"]
+                     [com.cognitect.aws/endpoints "1.1.12.478"]
+                     [com.cognitect.aws/s3 "847.2.1387.0"]
 
                      ;; bob needs javax.xml.bind, and it's removed in jdk 11
                      [javax.xml.bind/jaxb-api "2.3.0"]
@@ -81,49 +81,26 @@
 
                      [com.github.ben-manes.caffeine/caffeine "3.1.2"]
 
-                     [cljfx "1.7.22"]
+                     [cljfx "1.9.5"
+                      :exclusions [org.clojure/clojure
+                                   org.openjfx/javafx-base
+                                   org.openjfx/javafx-graphics
+                                   org.openjfx/javafx-controls
+                                   org.openjfx/javafx-media
+                                   org.openjfx/javafx-web]]
 
-                     [org.openjfx/javafx-base "19.0.2.1"]
-                     [org.openjfx/javafx-base "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-base "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-base "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-controls "19.0.2.1"]
-                     [org.openjfx/javafx-controls "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-controls "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-controls "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-graphics "19.0.2.1"]
-                     [org.openjfx/javafx-graphics "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-graphics "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-graphics "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-media "19.0.2.1"]
-                     [org.openjfx/javafx-media "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-media "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-media "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-web "19.0.2.1"]
-                     [org.openjfx/javafx-web "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-web "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-web "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-fxml "19.0.2.1"]
-                     [org.openjfx/javafx-fxml "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-fxml "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-fxml "19.0.2.1" :classifier "win"]
-                     [org.openjfx/javafx-swing "19.0.2.1"]
-                     [org.openjfx/javafx-swing "19.0.2.1" :classifier "linux"]
-                     [org.openjfx/javafx-swing "19.0.2.1" :classifier "mac"]
-                     [org.openjfx/javafx-swing "19.0.2.1" :classifier "win"]
+                     [org.jogamp.gluegen/gluegen-rt "2.4.0"]
+                     [org.jogamp.gluegen/gluegen-rt "2.4.0" :classifier "natives-linux-amd64"]
+                     [org.jogamp.gluegen/gluegen-rt "2.4.0" :classifier "natives-macosx-universal"]
+                     [org.jogamp.gluegen/gluegen-rt "2.4.0" :classifier "natives-windows-amd64"]
+                     [org.jogamp.jogl/jogl-all      "2.4.0"]
+                     [org.jogamp.jogl/jogl-all      "2.4.0" :classifier "natives-linux-amd64"]
+                     [org.jogamp.jogl/jogl-all      "2.4.0" :classifier "natives-macosx-universal"]
+                     [org.jogamp.jogl/jogl-all      "2.4.0" :classifier "natives-windows-amd64"]
 
-                     [com.metsci.ext.org.jogamp.gluegen/gluegen-rt "2.4.0-rc-20200202"]
-                     [com.metsci.ext.org.jogamp.gluegen/gluegen-rt "2.4.0-rc-20200202" :classifier "natives-linux-amd64"]
-                     [com.metsci.ext.org.jogamp.gluegen/gluegen-rt "2.4.0-rc-20200202" :classifier "natives-macosx-universal"]
-                     [com.metsci.ext.org.jogamp.gluegen/gluegen-rt "2.4.0-rc-20200202" :classifier "natives-windows-amd64"]
-                     [com.metsci.ext.org.jogamp.gluegen/gluegen-rt "2.4.0-rc-20200202" :classifier "natives-windows-i586"]
-                     [com.metsci.ext.org.jogamp.jogl/jogl-all      "2.4.0-rc-20200202"]
-                     [com.metsci.ext.org.jogamp.jogl/jogl-all      "2.4.0-rc-20200202" :classifier "natives-linux-amd64"]
-                     [com.metsci.ext.org.jogamp.jogl/jogl-all      "2.4.0-rc-20200202" :classifier "natives-macosx-universal"]
-                     [com.metsci.ext.org.jogamp.jogl/jogl-all      "2.4.0-rc-20200202" :classifier "natives-windows-amd64"]
-                     [com.metsci.ext.org.jogamp.jogl/jogl-all      "2.4.0-rc-20200202" :classifier "natives-windows-i586"]
+                     [org.snakeyaml/snakeyaml-engine "1.0"]
 
-                     [org.snakeyaml/snakeyaml-engine "1.0"]]
+                     [net.objecthunter/exp4j "0.4.8"]]
 
   :source-paths      ["src/clj"]
 
@@ -141,13 +118,14 @@
                       "../engine/graphics/proto"
                       "../engine/input/proto"
                       "../engine/particle/proto/particle"
-                      "../engine/render/proto/render"
+                      "../engine/render/proto"
                       "../engine/resource/proto"
                       "../engine/rig/proto"
                       "../engine/script/src"]
 
   :protobuf-includes ["../engine/gameobject/proto"
                       "../engine/gamesys/proto"
+                      "../engine/graphics/proto"
                       "../engine/ddf/src"
                       "../engine/script/src"
                       ~(str (System/getenv "DYNAMO_HOME") "/ext/include")]
@@ -159,10 +137,12 @@
                       :source-maps false}
 
   :aliases           {"benchmark" ["with-profile" "+test" "trampoline" "run" "-m" "benchmark.graph-benchmark"]
-                      "preflight" ["with-profile" "+preflight,+dev,+test" "preflight"]}
+                      "preflight" ["with-profile" "+preflight,+dev,+test" "preflight"]
+                      "prerelease" ["do" "clean," "protobuf," "sass" "once," "javac," "with-profile" "dev,sidecar,release" "run" "-m" "aot"]}
 
   ;; used by `pack` task
-  :packing           {:pack-path "resources/_unpack"}
+  :packing           {:pack-path "resources/_unpack"
+                      :lua-language-server-version "v1.7795"}
 
   :codox             {:sources                   ["src/clj"]
                       :output-dir                "target/doc/api"
@@ -174,68 +154,155 @@
   :jvm-opts          ["-Djna.nosys=true"
                       "-Djava.net.preferIPv4Stack=true"
                       "-Dfile.encoding=UTF-8"
-                      "--illegal-access=warn"
                       ;; hide warnings about illegal reflective access by jogl
                       "--add-opens=java.base/java.lang=ALL-UNNAMED"
                       "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
                       "--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED"
+                      ;; used in lsp.clj (java.lang.String sun.nio.fs.Globs.toUnixRegexPattern)
+                      "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED"
                       ;; hide warnings about illegal reflective access by clojure
-                      "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED"]
+                      "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED"
+                      ;; used in editor.scene$read_to_buffered_image
+                      "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED"]
   :main ^:skip-aot   com.defold.editor.Main
 
   :uberjar-exclusions [#"^natives/"]
 
-  :profiles          {:test    {:injections [(defonce initialize-test-prerequisites
-                                               (do
-                                                 (com.defold.libs.ResourceUnpacker/unpackResources)
-                                                 (javafx.application.Platform/startup
-                                                   (fn []
-                                                     (com.jogamp.opengl.GLProfile/initSingleton)))))]
+  :javac-options ["-Xlint:unchecked" "-Xlint:deprecation"]
+
+  ;; Skip native extensions tests:
+  ;; lein test :no-native-extensions
+  :test-selectors {:no-native-extensions (complement :native-extensions)}
+
+  :profiles          {:test    {:injections [(com.defold.libs.ResourceUnpacker/unpackResources)]
                                 :resource-paths ["test/resources"]
-                                :jvm-opts ["-Ddefold.tests=true"]}
+                                :jvm-opts ["-Ddefold.tests=true"
+                                           "-Ddefold.cache.libraries=true"]}
                       :preflight {:dependencies [[jonase/kibit "0.1.6" :exclusions [org.clojure/clojure]]
                                                  [cljfmt-mg "0.6.4" :exclusions [org.clojure/clojure]]]}
-                      :uberjar {:prep-tasks  ^:replace ["clean" "protobuf" ["sass" "once"] "javac" ["run" "-m" "aot"]]
+                      :sidecar {:source-paths ["sidecar"]}
+                      :docs {:source-paths ["src/docs"]
+                             ;; Docs are generated by the engine build scripts at a point BEFORE
+                             ;; the bob is even built, so we need a separate "project" without bob
+                             ;; dependency to generate docs
+                             :java-source-paths ^:replace []
+                             :dependencies ^:replace [[org.clojure/clojure "1.12.0"]
+                                                      [commons-io/commons-io "2.4"]
+                                                      [prismatic/schema "1.1.9"]
+                                                      [org.luaj/luaj-jse "3.0.1"]
+                                                      [clj-antlr "0.2.2"
+                                                       :exclusions [org.antlr/antlr4 org.antlr/antlr4-runtime]]
+                                                      [org.antlr/antlr4 "4.7.2"]
+                                                      [org.antlr/antlr4-runtime "4.7.2"]]}
+                      :uberjar {:prep-tasks  ^:replace []
                                 :aot          :all
-                                :omit-source  true
-                                :source-paths ["sidecar"]}
+                                :auto-clean   false
+                                :omit-source  true}
                       :local-repl {:injections [(require 'dev) (future ((requiring-resolve 'editor/-main)))]
                                    :jvm-opts ["-Ddefold.nrepl=false"]}
                       :vscode {:plugins [[nrepl "0.6.0"]]}
                       :cider {:plugins [[cider/cider-nrepl "0.24.0"]
                                         ;;[refactor-nrepl "2.4.0"] ;; -- this does not seem to work well together with cider-nrepl 0.24.0 so it might be better to just skip.
                                         [com.billpiel/sayid "0.0.18"]]}
-                      :release {:jvm-opts ["-Ddefold.build=release"]}
+                      :release {:jvm-opts ["-Ddefold.build=release" "-Dclojure.spec.compile-asserts=false"]}
                       :headless {:jvm-opts ["-Dtestfx.robot=glass" "-Dglass.platform=Monocle" "-Dmonocle.platform=Headless" "-Dprism.order=sw"]
                                  :dependencies [[org.testfx/openjfx-monocle "jdk-12.0.1+2"]]}
                       :smoke-test {:jvm-opts ["-Ddefold.smoke.log=true"]}
+                      :cache-libraries {:jvm-opts ["-Ddefold.cache.libraries=true"]}
                       :reveal {:source-paths ["src/reveal"]
+                               :jvm-opts ["-Djol.magicFieldOffset=true" "-XX:+EnableDynamicAgentLoading"]
                                :injections [(require 'editor.reveal)]
-                               :dependencies [[vlaaad/reveal "1.3.280"]]}
+                               :dependencies [[vlaaad/reveal "1.3.284"]]}
                       :metrics {:jvm-opts ["-Ddefold.metrics=true"]}
+                      :jamm {:dependencies [[com.github.jbellis/jamm "0.4.0"]]
+                             :jvm-opts [~(str "-javaagent:"
+                                           (.replace (System/getProperty "user.home") \\ \/)
+                                           "/.m2/repository/com/github/jbellis/jamm/0.4.0/jamm-0.4.0.jar")
+                                        "-Ddefold.jamm=true"
+                                        "--add-opens=java.base/java.util=ALL-UNNAMED"
+                                        "--add-opens=java.base/java.util.function=ALL-UNNAMED"
+                                        "--add-opens=java.base/java.util.regex=ALL-UNNAMED"
+                                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+                                        "--add-opens=java.net.http/jdk.internal.net.http=ALL-UNNAMED"
+                                        "--add-opens=java.net.http/jdk.internal.net.http.common=ALL-UNNAMED"]}
                       :no-asserts {:global-vars {*assert* false}}
-                      :dev     {:dependencies      [[com.clojure-goes-fast/clj-async-profiler "0.5.1"]
-                                                    [com.clojure-goes-fast/clj-memory-meter "0.1.2"]
+                      :no-decorated-exceptions {:jvm-opts ["-Ddefold.exception.decorate.disable=true"]}
+                      :no-schemas {:jvm-opts ["-Ddefold.schema.check.disable=true"]}
+                      :no-spec-asserts {:jvm-opts ["-Dclojure.spec.compile-asserts=false"]}
+                      :performance [:no-decorated-exceptions :no-schemas :no-spec-asserts]
+                      :16gb {:jvm-opts ["-Xmx16g"]}
+                      :x86_64-linux {:dependencies [[org.openjfx/javafx-base "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-controls "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-controls org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-graphics "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-graphics org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-media "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-media org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-web "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-web org.openjfx/javafx-controls org.openjfx/javafx-media]]
+                                                    [org.openjfx/javafx-fxml "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-fxml org.openjfx/javafx-controls]]
+                                                    [org.openjfx/javafx-swing "23.0.1" :classifier "linux" :exclusions [org.openjfx/javafx-swing org.openjfx/javafx-graphics]]]
+                                     :uberjar-name "editor-x86_64-linux-standalone.jar"}
+                      :x86_64-win32 {:dependencies [[org.openjfx/javafx-base "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-controls "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-controls org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-graphics "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-graphics org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-media "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-media org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-web "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-web org.openjfx/javafx-controls org.openjfx/javafx-media]]
+                                                    [org.openjfx/javafx-fxml "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-fxml org.openjfx/javafx-controls]]
+                                                    [org.openjfx/javafx-swing "23.0.1" :classifier "win" :exclusions [org.openjfx/javafx-swing org.openjfx/javafx-graphics]]]
+                                     :uberjar-name "editor-x86_64-win32-standalone.jar"}
+                      :x86_64-macos {:dependencies [[org.openjfx/javafx-base "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-controls "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-controls org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-graphics "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-graphics org.openjfx/javafx-base]]
+                                                    [org.openjfx/javafx-media "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-media org.openjfx/javafx-graphics]]
+                                                    [org.openjfx/javafx-web "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-web org.openjfx/javafx-controls org.openjfx/javafx-media]]
+                                                    [org.openjfx/javafx-fxml "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-fxml org.openjfx/javafx-controls]]
+                                                    [org.openjfx/javafx-swing "23.0.1" :classifier "mac" :exclusions [org.openjfx/javafx-swing org.openjfx/javafx-graphics]]]
+                                     :uberjar-name "editor-x86_64-macos-standalone.jar"}
+                      :arm64-macos {:dependencies [[org.openjfx/javafx-base "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-base]]
+                                                   [org.openjfx/javafx-controls "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-controls org.openjfx/javafx-graphics]]
+                                                   [org.openjfx/javafx-graphics "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-graphics org.openjfx/javafx-base]]
+                                                   [org.openjfx/javafx-media "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-media org.openjfx/javafx-graphics]]
+                                                   [org.openjfx/javafx-web "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-web org.openjfx/javafx-controls org.openjfx/javafx-media]]
+                                                   [org.openjfx/javafx-fxml "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-fxml org.openjfx/javafx-controls]]
+                                                   [org.openjfx/javafx-swing "23.0.1" :classifier "mac-aarch64" :exclusions [org.openjfx/javafx-swing org.openjfx/javafx-graphics]]]
+                                    :uberjar-name "editor-arm64-macos-standalone.jar"}
+                      :dev     {:dependencies      [;; generic javafx dep picks up natives for the current platform
+                                                    [org.openjfx/javafx-base "23.0.1"]
+                                                    [org.openjfx/javafx-controls "23.0.1"]
+                                                    [org.openjfx/javafx-graphics "23.0.1"]
+                                                    [org.openjfx/javafx-media "23.0.1"]
+                                                    [org.openjfx/javafx-web "23.0.1"]
+                                                    [org.openjfx/javafx-fxml "23.0.1"]
+                                                    [org.openjfx/javafx-swing "23.0.1"]
+                                                    [com.clojure-goes-fast/clj-async-profiler "0.5.1"]
                                                     [criterium "0.4.3"]
-                                                    [org.clojure/test.check   "0.9.0"]
-                                                    [org.clojure/tools.trace  "0.7.9"]
-                                                    [org.mockito/mockito-core "1.10.19"]
-                                                    [ring "1.4.0"]]
+                                                    [lambdaisland/deep-diff2 "2.10.211"]
+                                                    [io.github.cljfx/dev "1.0.39"]
+                                                    [org.clojure/test.check "1.1.1"]
+                                                    [org.clojure/tools.trace "0.7.9"]
+                                                    [org.mockito/mockito-core "1.10.19"]]
+                                :source-paths      ["src/dev"]
                                 :repl-options      {:init-ns user}
                                 :proto-paths       ["test/proto"]
                                 :resource-paths    ["test/resources"]
-                                :jvm-opts          ["-Ddefold.unpack.path=tmp/unpack"
+                                :jvm-opts          ["-Ddefold.extension.lua-preprocessor.url=https://github.com/defold/extension-lua-preprocessor/archive/refs/tags/1.1.3.zip"
+                                                    "-Ddefold.extension.rive.url=https://github.com/defold/extension-rive/archive/refs/tags/3.9.0.zip"
+                                                    "-Ddefold.extension.simpledata.url=https://github.com/defold/extension-simpledata/archive/refs/tags/v1.1.0.zip"
+                                                    "-Ddefold.extension.spine.url=https://github.com/defold/extension-spine/archive/refs/tags/3.7.0.zip"
+                                                    "-Ddefold.extension.teal.url=https://github.com/defold/extension-teal/archive/refs/tags/v1.2.zip"
+                                                    "-Ddefold.extension.texturepacker.url=https://github.com/defold/extension-texturepacker/archive/refs/tags/2.2.0.zip"
+                                                    "-Ddefold.unpack.path=tmp/unpack"
                                                     "-Ddefold.nrepl=true"
                                                     "-Ddefold.log.dir="
+                                                    ;"-Djogl.verbose=true"
+                                                    ;"-Djogl.debug=true"
                                                     "-Djogl.debug.DebugGL" ; TraceGL is also useful
                                                     "-Djogl.texture.notexrect=true"
                                                     "-XX:MaxRAMPercentage=75"
                                                     ;"-XX:+UnlockCommercialFeatures"
                                                     ;"-XX:+FlightRecorder"
                                                     "-XX:-OmitStackTraceInFastThrow"
+                                                    "-Dclojure.spec.check-asserts=true"
 
                                                     ;; Flags for async-profiler.
                                                     ;; From https://github.com/clojure-goes-fast/clj-async-profiler/blob/master/README.md
                                                     "-Djdk.attach.allowAttachSelf"   ; Required for attach to running process.
                                                     "-XX:+UnlockDiagnosticVMOptions" ; Required for DebugNonSafepoints.
-                                                    "-XX:+DebugNonSafepoints"]}})     ; Without this, there is a high chance that simple inlined methods will not appear in the profile.
+                                                    "-XX:+DebugNonSafepoints"]}})    ; Without this, there is a high chance that simple inlined methods will not appear in the profile.
